--- a/iblocks-frontend/src/index.css
+++ b/iblocks-frontend/src/index.css
@@ -2,4 +2,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 body{
     overflow-x: hidden;
+    background-color:var(--backgroundcolor) ;
 }
